# pixels

./: pom.xml  storageGC.md  storageGC_test_cases.md
.codebuddy/plan/storage_gc_validation/: completion_summary.md  requirements.md
cpp/: Makefile
cpp/pixels-amphi/: Dockerfile
cpp/pixels-amphi/benchmark/scripts/: cache_algorithm.py
cpp/pixels-cli/: CMakeLists.txt
cpp/pixels-common/: CMakeLists.txt
cpp/pixels-common/include/physical/: ByteOrder.h  Storage.h
cpp/pixels-common/include/physical/storage/: LocalFS.h
cpp/pixels-common/lib/physical/io/: PhysicalLocalReader.cpp
cpp/pixels-common/lib/physical/storage/: LocalFS.cpp
cpp/pixels-core/: CMakeLists.txt
cpp/pixels-core/include/: TypeDescription.h
cpp/pixels-core/include/encoding/: Dictionary.h  Encoder.h  EncodingLevel.h  HashTableDictionary.h  RunLenByteEncoder.h
cpp/pixels-core/include/reader/: PixelsRecordReaderImpl.h
cpp/pixels-core/include/stats/: StatsRecoder.h
cpp/pixels-core/include/utils/: BitUtils.h  EncodingUtils.h  Integer.h
cpp/pixels-core/include/vector/: BinaryColumnVector.h  DoubleColumnVector.h  FloatColumnVector.h  LongDecimalColumnVector.h  TimeColumnVector.h  VectorColumnVector.h
cpp/pixels-core/include/writer/: BaseColumnWriter.h  BinaryColumnWriter.h  BooleanColumnWriter.h  ByteColumnWriter.h  CharColumnWriter.h  ColumnWriter.h  ColumnWriterBuilder.h  DateColumnWriter.h  DecimalColumnWriter.h  DoubleColumnWriter.h  FloatColumnWriter.h  IntegerColumnWriter.h  LongDecimalColumnWriter.h  PixelsWriterOption.h  StringColumnWriter.h  TimeColumnWriter.h  TimestampColumnWriter.h  VarbinaryColumnWriter.h  VarcharColumnWriter.h  VectorColumnWriter.h
cpp/pixels-core/lib/: TypeDescription.cpp
cpp/pixels-core/lib/encoding/: HashTableDictionary.cpp  RunLenByteEncoder.cpp
cpp/pixels-core/lib/reader/: PixelsRecordReaderImpl.cpp
cpp/pixels-core/lib/stats/: StatsRecoder.cpp
cpp/pixels-core/lib/utils/: BitUtils.cpp  EncodingUtils.cpp  Integer.cpp
cpp/pixels-core/lib/vector/: BinaryColumnVector.cpp  DoubleColumnVector.cpp
cpp/pixels-core/lib/writer/: BaseColumnWriter.cpp  BinaryColumnWriter.cpp  BooleanColumnWriter.cpp  ByteColumnWriter.cpp  CharColumnWriter.cpp  ColumnWriter.cpp  ColumnWriterBuilder.cpp  DateColumnWriter.cpp  DecimalColumnWriter.cpp  DoubleColumnWriter.cpp  FloatColumnWriter.cpp  IntegerColumnWriter.cpp  LongDecimalColumnWriter.cpp  StringColumnWriter.cpp  TimeColumnWriter.cpp  TimestampColumnWriter.cpp  VarbinaryColumnWriter.cpp  VarcharColumnWriter.cpp  VectorColumnWriter.cpp
cpp/pixels-index/pixels-index-rockset/: README.md
cpp/pixels-retina/: CMakeLists.txt
cpp/pixels-retina/include/: RGVisibility.h  RGVisibilityJni.h  TileVisibility.h
cpp/pixels-retina/include/vector/: vector.h
cpp/pixels-retina/include/visibility/: visibility.h
cpp/pixels-retina/lib/: RGVisibility.cpp  RGVisibilityJni.cpp  TileVisibility.cpp
cpp/pixels-retina/lib/vector/: vector.cpp
cpp/pixels-retina/lib/visibility/: visibility.cpp  visibility_JNI.cpp
cpp/pixels-retina/test/: RGVisibilityTest.cpp  vectorTest.cpp  visibilityTest.cpp
docker/: Dockerfile
docs/: INSTALL.md
pixels-amphi/: README.md
pixels-cli/src/main/java/io/pixelsdb/pixels/cli/load/: Parameters.java  PixelsConsumer.java
pixels-common/src/main/java/io/pixelsdb/pixels/common/index/: MainIndex.java
pixels-common/src/main/java/io/pixelsdb/pixels/common/metadata/: MetadataService.java
pixels-common/src/main/java/io/pixelsdb/pixels/common/utils/: EtcdUtil.java  RetinaUtils.java
pixels-common/src/main/resources/: pixels.properties
pixels-common/src/test/java/io/pixelsdb/pixels/common/transaction/: TestTransService.java
pixels-core/src/main/java/io/pixelsdb/pixels/core/reader/: PixelsReaderOption.java  PixelsRecordReader.java  PixelsRecordReaderImpl.java
pixels-daemon/src/main/java/io/pixelsdb/pixels/daemon/metadata/: MetadataServiceImpl.java
pixels-daemon/src/main/java/io/pixelsdb/pixels/daemon/retina/: RetinaServerImpl.java
pixels-grpc/: pom.xml
pixels-grpc/src/main/java/io/pixelsdb/: Main.java
pixels-grpc/src/main/java/io/pixelsdb/pixels/grpc/: Main.java
pixels-grpc/src/main/resources/: grpc.properties
pixels-index/pixels-index-rocksdb/: pom.xml
pixels-planner/src/main/java/io/pixelsdb/pixels/planner/: PixelsPlanner.java
pixels-retina/src/main/java/io/pixelsdb/pixels/retina/: GcWal.java  RGVisibility.java  RetinaCheckpointReader.java  RetinaResourceManager.java  StorageGarbageCollector.java
pixels-retina/src/test/java/io/pixelsdb/pixels/retina/: EtcdTest.java  StorageGCIntegrationTest.java  StorageGCTestDataGenerator.java  StorageGCTestValidator.java  StorageGarbageCollectorTest.java  TestRGVisibility.java  TestRetinaCheckpoint.java  TestStorageGarbageCollector.java
pixels-server/: README.md
pixels-turbo/: README.md
pixels-turbo/pixels-invoker-spike/: pom.xml
pixels-turbo/pixels-scaling-ec2/: README.md
pixels-turbo/pixels-worker-spike/: pom.xml
proto/: deleter.proto  metadata.proto  retina.proto
scripts/: test_checkpoint_performance.py
(+21 files in other folders)
