project(pixels-core)

set(pixels_core_cxx
        lib/PixelsReaderImpl.cpp
        lib/PixelsReaderBuilder.cpp
        lib/reader/PixelsRecordReaderImpl.cpp
        lib/PixelsVersion.cpp
        lib/PixelsFooterCache.cpp
        lib/exception/PixelsReaderException.cpp
        lib/exception/PixelsFileMagicInvalidException.cpp
        lib/exception/PixelsFileVersionInvalidException.cpp
        lib/reader/PixelsReaderOption.cpp
        lib/TypeDescription.cpp
        lib/Category.cpp
        lib/vector/LongColumnVector.cpp
        lib/vector/VectorizedRowBatch.cpp
        lib/vector/ColumnVector.cpp
        lib/vector/ByteColumnVector.cpp
        lib/vector/BinaryColumnVector.cpp
        lib/reader/ColumnReader.cpp
        lib/reader/ColumnReaderBuilder.cpp
        lib/reader/IntegerColumnReader.cpp
        lib/reader/CharColumnReader.cpp
        lib/reader/VarcharColumnReader.cpp
        lib/reader/StringColumnReader.cpp
        lib/encoding/Decoder.cpp
        lib/encoding/RunLenIntDecoder.cpp
        lib/encoding/Encoder.cpp
        lib/encoding/RunLenIntEncoder.cpp
        lib/encoding/RunLenByteEncoder.cpp
        lib/utils/EncodingUtils.cpp
        lib/utils/BitUtils.cpp
        include/vector/DecimalColumnVector.h
        lib/vector/DecimalColumnVector.cpp
        include/reader/DecimalColumnReader.h
        lib/reader/DecimalColumnReader.cpp
        lib/vector/DateColumnVector.cpp
        include/vector/DateColumnVector.h
        include/reader/DateColumnReader.h
        lib/reader/DateColumnReader.cpp
        include/PixelsFilter.h
        lib/PixelsFilter.cpp
        include/PixelsBitMask.h
        lib/PixelsBitMask.cpp
        include/vector/TimestampColumnVector.h
        lib/vector/TimestampColumnVector.cpp
        include/reader/TimestampColumnReader.h
        lib/reader/TimestampColumnReader.cpp
        include/writer/ColumnWriter.h
        lib/encoding/EncodingLevel.cpp
        lib/writer/ColumnWriter.cpp
        lib/utils/Integer.cpp
        lib/stats/StatsRecoder.cpp
        include/writer/BooleanColumnWriter.h
        include/writer/ByteColumnWriter.h
        include/writer/IntegerColumnWriter.h
        include/writer/FloatColumnWriter.h
        include/writer/DoubleColumnWriter.h
        include/writer/DecimalColumnWriter.h
        include/writer/LongDecimalColumnWriter.h
        include/writer/StringColumnWriter.h
        include/writer/CharColumnWriter.h
        include/writer/VarcharColumnWriter.h
        include/writer/BinaryColumnWriter.h
        include/writer/VarbinaryColumnWriter.h
        include/writer/DateColumnWriter.h
        include/writer/TimeColumnWriter.h
        include/writer/TimestampColumnWriter.h
        include/writer/VectorColumnWriter.h
        lib/writer/BooleanColumnWriter.cpp
        lib/writer/ByteColumnWriter.cpp
        lib/writer/IntegerColumnWriter.cpp
        lib/writer/FloatColumnWriter.cpp
        lib/writer/DoubleColumnWriter.cpp
        lib/writer/DecimalColumnWriter.cpp
        lib/writer/LongDecimalColumnWriter.cpp
        lib/writer/StringColumnWriter.cpp
        lib/writer/CharColumnWriter.cpp
        lib/writer/VarcharColumnWriter.cpp
        lib/writer/BinaryColumnWriter.cpp
        lib/writer/VarbinaryColumnWriter.cpp
        lib/writer/DateColumnWriter.cpp
        lib/writer/TimeColumnWriter.cpp
        lib/writer/TimestampColumnWriter.cpp
        lib/writer/VectorColumnWriter.cpp
        lib/writer/BaseColumnWriter.cpp
)

add_library(pixels-core ${pixels_core_cxx})

target_link_libraries(
        pixels-core
        pixels-common
)
SET(CMAKE_CXX_FLAGS "-mavx2")

include_directories(${CMAKE_CURRENT_BINARY_DIR}/../pixels-common/liburing/src/include)
include_directories(../pixels-common/include)
include_directories(include)
